--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-md-4 design">
                 <div class="swapout">
-                    <img src="../image/services_icons/design_icon.png" alt>
+                    <img src= alt>
                     <h3>Design</h3>
                 </div>
                 <div class="swapout">
