--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="col-md-4 development">
-                <img src=".." alt>
+                <img src="../image/services_icons/dev_icon.png" alt>
                 <h3>Development</h3>
                 <p>All engineers are fluent in the latest enterprise, mobile and web development
                     technologies.<br>
