added br to welcome section

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
     <div class="container-fluid style">
         <div class="container">
-            <img src="./image/logo/logo.png" alt="">
-            <br>
-            <br>
-            <h1>
-                WELCOME
+            <div class="welcome">
+                <img src="./image/logo/logo.png" alt="">
+                <h1>
+                    <br>
+                    WELCOME
+                    <br>
+                    TO DELANI STUDIO
+                    <br>
+                </h1>
+                <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
                 <br>
-                TO DELANI STUDIO
-            </h1>
-            <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-            <br>
-            <img src="../image/mouse_click.png" alt="">
+                <img src="../image/mouse_click.png" alt="">
+            </div>
         </div>
     </div>
     <div class="container-fluid about">
@@ -151,10 +153,6 @@
             <input type="text" name="name" placeholder="your message here">
             <input type="submit" name="name" value="Enter name">
         </form>
-
-
-
-
 
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/script.js"></script>
