--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container-fluid style">
         <div class="container">
-            <div class="welcome"
+            <div class="welcome">
                 <img src="./image/logo/logo.png" alt="">
                 <h1>
                     <br>
