added social icons to index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </p>
             </div>
             <div class="col-md-4 product management">
-                <img src="../image/services_icons/product_icon.png" >
+                <img src="../image/services_icons/product_icon.png">
                 <h3>Product Management</h3>
                 <p>
                     Planning and development is iterative. Because we are constantly coding and testing, the
@@ -145,14 +145,34 @@
     </div>
     <br>
     <br>
-    <div class="container-flud ct">
-        <h2>CONTACT US</h2>
-        <form>
-            <input type="text" name="name" placeholder="name">
-            <input type="text" name="Email" placeholder=" Email">
-            <input type="text" name="name" placeholder="your message here">
-            <input type="submit" name="name" value="Enter name">
-        </form>
+    <div class="container-fluid ct">
+        <div class="contact">
+            <h2>CONTACT US</h2>
+            <form>
+                <input type="text" class="cc" placeholder="name">
+                <input type="text" class="cc" placeholder=" Email">
+                <input type="text" class="message" placeholder="your message here">
+
+            </form>
+            <button type="button" class="btn" onclick="submitform()">Submit</button>
+
+            <div class="container io">
+                <img src="./image/social_icons/twitter.png">
+                <img src="./image/social_icons/dribble.png">
+                <img src="./image/social_icons/facebook.png">
+                <img src="./image/social_icons/g_plus.png">
+                <img src="./image/social_icons/skype.png">
+                <img src="./image/social_icons/stumble_upon.png">
+                <img src="./image/social_icons/behance.png">
+                <img src="./image/social_icons/you_tube.png">
+                <img src="./image/social_icons/pinterest.png">
+                <img src="./image/social_icons/flickr.png">
+
+
+
+            </div>
+
+        </div>
 
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/script.js"></script>
