added social icons to html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <img src="./image/social_icons/behance.png">
                 <img src="./image/social_icons/you_tube.png">
                 <img src="./image/social_icons/pinterest.png">
-                <img src="./image/social_icons/flickr.png">
+                <img src="./image/social_icons/flickr.png"
 
 
 
