edit contact class in html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <br>
     <br>
-    <div class="container-fluid ct"
+    <div class="container-fluid ct">
         <div class="contact">
             <h2>CONTACT US</h2>
             <form>
