edit product image html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md-4 design">
                 <div class="swapout">
-                    <img src="../image/services_icons/design_icon.png" alt>
+                    <img src="../image/services_icons/design_icon.png">
                     <h3>Design</h3>
                 </div>
                 <div class="swapout">
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="col-md-4 development">
-                <img src="../image/services_icons/dev_icon.png" alt="">
+                <img src="../image/services_icons/dev_icon.png">
                 <h3>Development</h3>
                 <p>All engineers are fluent in the latest enterprise, mobile and web development
                     technologies.<br>
@@ -92,7 +92,7 @@
                 </p>
             </div>
             <div class="col-md-4 product management">
-                
+                <img src="./image/services_icons/product_icon.png">
                 <h3>Product Management</h3>
                 <p>
                     Planning and development is iterative. Because we are constantly coding and testing, the
