--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md-4 design">
                 <div class="swapout">
-                    <img src="../image/services_icons/design_icon.png">
+                    <img src="./image/services_icons/design_icon.png">
                     <h3>Design</h3>
                 </div>
                 <div class="swapout">
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="col-md-4 development">
-                <img src="../image/services_icons/dev_icon.png">
+                <img src="./image/services_icons/dev_icon.png">
                 <h3>Development</h3>
                 <p>All engineers are fluent in the latest enterprise, mobile and web development
                     technologies.<br>
