edit form in html

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         <div class="contact">
             <h2>CONTACT US</h2>
             <form>
-                <input type="text" class="cc" placeholder="name">
-                <input type="text" class="cc" placeholder=" Email">
-                <input type="text" class="message" placeholder="your message here">
+                <input type="text" class="cc" placeholder="Name...">
+                <input type="text" class="cc" placeholder=" Email...">
+                <input type="text" class="message" placeholder="Your message here...">
 
             </form>
             <button type="button" class="btn" onclick="submitform()">Submit</button>
@@ -167,11 +167,7 @@
                 <img src="./image/social_icons/you_tube.png">
                 <img src="./image/social_icons/pinterest.png">
                 <img src="./image/social_icons/flickr.png">
-
-
-
             </div>
-
         </div>
 
         <script src="js/jquery-3.3.1.js"></script>
