edit form in html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <form>
                 <input type="text" class="cc" placeholder="Name...">
                 <input type="text" class="cc" placeholder=" Email...">
-                <input type="text" class="message" placeholder="Your message here...">
+                <input type="text" class="message" placeholder="Your message here">
 
             </form>
             <button type="button" class="btn" onclick="submitform()">Submit</button>
