edit contact color in css

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                 <img src="./image/social_icons/flickr.png">
             </div>
         </div>
-
+        <h6>DELANI STUDIO</h6>
+        
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/script.js"></script>
 </body>
