added h6 in html

--- a/index.html
+++ b/index.html
@@ -167,10 +167,15 @@
                 <img src="./image/social_icons/you_tube.png">
                 <img src="./image/social_icons/pinterest.png">
                 <img src="./image/social_icons/flickr.png">
+                <p>&nbsp;</p>
+                <h6>DELANI STUDIO</h6>
+                <p>&nbsp;</p>
+                   <h6>2019</h6>
             </div>
         </div>
-        <h6>DELANI STUDIO</h6>
-       
+
+
+
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/script.js"></script>
 </body>
