edit mous margin

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 </h1>
                 <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
                 <br>
-                <img src="../image/mouse_click.png" alt="">
+                <img src="../image/mouse_click.png" alt=""  id="mouse">
+
             </div>
         </div>
     </div>
