added live links for social in html

--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
             <button type="button" class="btn" onclick="submitform()">Submit</button>
 
             <div class="container io">
-                <img src="./image/social_icons/twitter.png">
-                <img src="./image/social_icons/dribble.png">
-                <img src="./image/social_icons/facebook.png">
-                <img src="./image/social_icons/g_plus.png">
-                <img src="./image/social_icons/skype.png">
-                <img src="./image/social_icons/stumble_upon.png">
-                <img src="./image/social_icons/behance.png">
-                <img src="./image/social_icons/you_tube.png">
-                <img src="./image/social_icons/pinterest.png">
-                <img src="./image/social_icons/flickr.png">
+                <a href="https://twitter.com/"><img src="./image/social_icons/twitter.png"></a>
+                <a href="https://dribbble.com/"><img src="./image/social_icons/dribble.png"></a>
+                <a href="https://www.facebook.com/"><img src="./image/social_icons/facebook.png"></a>
+                <a href="https://plus.google.com/"><img src="./image/social_icons/g_plus.png"></a>
+                <a href="https://www.skype.com/en/"><img src="./image/social_icons/skype.png"></a>
+                <a href="http://www.stumble.com/wp/"><img src="./image/social_icons/stumble_upon.png"></a>
+                <a href="https://www.behance.com/"><img src="./image/social_icons/behance.png"></a>
+                <a href="https://www.youtube.com/watch?v=rIO5326FgPE"><img src="./image/social_icons/you_tube.png"></a>
+                <a href="https://www.pinterest.com/"><img src="./image/social_icons/pinterest.png"></a>
+                <a href="https://flickr.com/"><img src="./image/social_icons/flickr.png"></a>
                 <p>&nbsp;</p>
                 <h6>DELANI STUDIO</h6>
                 <p>&nbsp;</p>
