added hover effect in  portfolio

--- a/index.html
+++ b/index.html
@@ -85,26 +85,26 @@
                 <img src="image/services_icons/dev_icon.png" class="myimage1">
                 <h3>Development</h3>
                 <div class="swapout01">
-                <p>All engineers are fluent in the latest enterprise, mobile and web development
-                    technologies.<br>
-                    <br>
-                    They collaborate with your team to write, and improve code on a daily basis, using
-                    proven
-                    practices such as test-driven development and pair programming.
-                </p>
-            </div>
+                    <p>All engineers are fluent in the latest enterprise, mobile and web development
+                        technologies.<br>
+                        <br>
+                        They collaborate with your team to write, and improve code on a daily basis, using
+                        proven
+                        practices such as test-driven development and pair programming.
+                    </p>
+                </div>
             </div>
             <div class="col-md-4 product">
                 <img src="./image/services_icons/product_icon.png" class="myimage2">
                 <h3>Product Management</h3>
                 <div class="swapout02">
-                <p>
-                    Planning and development is iterative. Because we are constantly coding and testing, the
-                    products we build are always ready to go live.<br>
-                    <br>
-                    This iterative process allows for changes as business requirements evolve.
-                </p>
-            </div>
+                    <p>
+                        Planning and development is iterative. Because we are constantly coding and testing, the
+                        products we build are always ready to go live.<br>
+                        <br>
+                        This iterative process allows for changes as business requirements evolve.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -117,16 +117,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work4.jpg" alt class="w-100">
+                    <div class="port">
+                        <div class="img1">
+                            <img src="./image/portfolio/work4.jpg" alt class="img-fluid">
+                        </div>
+                        <div class="mytext">
+                            Project1
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work3.jpg" alt class="w-100">
+                    <div class="port">
+                        <div class="img1">
+                            <img src="./image/portfolio/work3.jpg" alt class="img-fluid">
+                        </div>
+                        <div class="mytext">
+                            Project2
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work2.jpg" alt class="img-fluid">
+                    <div class="port">
+                        <div class="img1">
+                            <img src="./image/portfolio/work2.jpg" alt class="img-fluid">
+                        </div>
+                        <div class="mytext">
+                            Project3
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work1.jpg" alt class="w-100">
+                    <div class="port">
+                        <div class="img1">
+                            <img src="./image/portfolio/work1.jpg" alt class="img-fluid">
+                        </div>
+                        <div class="mytext">
+                            Project1
+                        </div>
+                    </div>
                 </div>
             </div>
             <br>
