modify my portfolio section

--- a/index.html
+++ b/index.html
@@ -160,16 +160,44 @@
             <br>
             <div class="row">
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work5.jpg" alt class="w-100">
+                        <div class="port">
+                                <div class="img1">
+                                <img src="./image/portfolio/work5.jpg" alt class="img-fluid">
+                                </div>
+                                <div class="mytext">
+                                    Project
+                                </div>
+                                </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work6.jpg" alt class="w-100">
+                        <div class="port">
+                                <div class="img1">
+                                <img src="./image/portfolio/work6.jpg" alt class="img-fluid">
+                                </div>
+                                <div class="mytext">
+                                    Project
+                                </div>
+                                </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work7.jpg" alt class="w-100">
+                        <div class="port">
+                                <div class="img1">
+                                <img src="./image/portfolio/work7.jpg" alt class="img-fluid">
+                                </div>
+                                <div class="mytext">
+                                    Project
+                                </div>
+                                </div>
                 </div>
                 <div class="col-md-3">
-                    <img src="./image/portfolio/work8.jpg" alt class="w-100">
+                        <div class="port">
+                                <div class="img1">
+                                <img src="./image/portfolio/work8.jpg" alt class="img-fluid">
+                                </div>
+                                <div class="mytext">
+                                    Project
+                                </div>
+                                </div>
                 </div>
             </div>
         </div>
