modify mouse button position

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </h1>
                 <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
                 <br>
-                <a href="#mymouse"><img src="../image/mouse_click.png" alt="" id="mouse"></a>
+                <a href="#mymouse"><img src="./image/mouse_click.png" alt="" id="mouse"></a>
 
             </div>
         </div>
