edit hover effect

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-
-    <div class="container-fluid style">
+    <div class="container-fluid style ">
         <div class="container">
             <div class="welcome">
                 <img src="./image/logo/logo.png" alt="">
@@ -65,7 +64,7 @@
         <br>
         <br>
         <div class="row">
-            <div class="col-md-4 design">
+            <div class="col-lg-4 col-sm-10 design">
                 <div class="swapout1">
                     <img src="./image/services_icons/design_icon.png" class="myimage">
                     <h3>Design</h3>
@@ -81,7 +80,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-4 development">
+            <div class="col-lg-4 col-sm-10 development">
                 <img src="image/services_icons/dev_icon.png" class="myimage1">
                 <h3>Development</h3>
                 <div class="swapout01">
@@ -94,7 +93,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-4 product">
+            <div class="col-lg-4 col-sm-10 product">
                 <img src="./image/services_icons/product_icon.png" class="myimage2">
                 <h3>Product Management</h3>
                 <div class="swapout02">
@@ -116,87 +115,72 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work4.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work4.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work3.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work3.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work2.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work2.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project </h3>
+                        </p>
+
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work1.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work1.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work5.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work5.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work6.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work6.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work7.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work7.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="port">
-                        <div class="img1">
-                            <img src="./image/portfolio/work8.jpg" alt class="img-fluid">
-                        </div>
-                        <div class="mytext">
-                            Project
-                        </div>
+                <div class="img1 port col-lg-3 col-sm-10 p-2">
+                    <img src="./image/portfolio/work8.jpg" alt class="img-fluid w-100">
+                    <div class="mytext">
+                        <p>
+                            <h3>Project</h3>
+                        </p>
                     </div>
                 </div>
             </div>
